fix: 修复build后运行报错的问题
Change-Id: Ia382ef45e0af3ab1bbef35452d620e21a661aff9

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^10.7.1",
-    "vue": "^3.3.11"
+    "@vueuse/core": "^10.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
